Fix accessiblity border on o-teaser image container
For video teasers there is a anchor wrapped around the image. This was
not showing the teal accessibility border when it was tabbed too.
Making the anchor display block gives the link the right dimensions
which displays the border correctly.

--- a/src/scss/themes/_video.scss
+++ b/src/scss/themes/_video.scss
@@ -42,6 +42,11 @@
 			background-color: oColorsGetPaletteColor('slate');
 		}
 	}
+
+	.o-teaser__image-container a {
+		display: block;
+		border: 0;
+	}
 }
 
 @mixin oTeaserBigVideo {
